--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
     "expo": "~50.0.6",
     "expo-location": "^16.5.3",
     "expo-status-bar": "~1.11.1",
